--- a/semantic-release/package.json
+++ b/semantic-release/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "semantic-release-scripts",
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
