--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,11 +18,12 @@ repos:
       args: ['--allow-missing-credentials']
     - id: detect-private-key
 - repo: https://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.74.1
+  rev: v1.64.1
   hooks:
-    - id: terraform_fmt
-    - id: terraform_docs
-      args:
-        - --hook-config=--path-to-file=README.md        .
+      - id: terraform_fmt
+      - id: terraform_validate
+      - id: terraform_docs
+        args:
+        - --hook-config=--path-to-file=README.md
         - --hook-config=--add-to-existing-file=true
         - --hook-config=--create-file-if-not-exist=true
